WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
101595
Regression(
r107593
) Crash in ContextMenuController::addInspectElementItem()
https://bugs.webkit.org/show_bug.cgi?id=101595
Summary
Regression(r107593) Crash in ContextMenuController::addInspectElementItem()
Allan Sandfeld Jensen
Reported
2012-11-08 06:00:03 PST
ContextMenuController::addInspectElementItem will if the contextMenu has been cleared first try to access it anyway causing a nullpoint access. This crashes tst_qwebinspector
Attachments
Patch
(1.75 KB, patch)
2012-11-08 06:02 PST
,
Allan Sandfeld Jensen
hausmann
: review+
webkit.review.bot
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Allan Sandfeld Jensen
Comment 1
2012-11-08 06:02:28 PST
Created
attachment 173026
[details]
Patch
Jocelyn Turcotte
Comment 2
2012-11-08 07:42:58 PST
***
Bug 101574
has been marked as a duplicate of this bug. ***
Jocelyn Turcotte
Comment 3
2012-11-08 07:44:57 PST
I have most of the WebKit1 tests fixed except 1 WebGL test and 1 QWebElement test still failing. I'm in the process of uploading the work so please tell me if you want to pick anything to avoid duplicate efforts.
Allan Sandfeld Jensen
Comment 4
2012-11-08 08:09:55 PST
(In reply to
comment #3
)
> I have most of the WebKit1 tests fixed except 1 WebGL test and 1 QWebElement test still failing. I'm in the process of uploading the work so please tell me if you want to pick anything to avoid duplicate efforts.
Sorry about that, great minds think alike, I guess. I was actually coming from this because I was fixing the API tests failing in QtWebKit2.3, I will now stick to those that only fail there then.
Jocelyn Turcotte
Comment 5
2012-11-08 08:16:47 PST
(In reply to
comment #4
)
> (In reply to
comment #3
) > > I have most of the WebKit1 tests fixed except 1 WebGL test and 1 QWebElement test still failing. I'm in the process of uploading the work so please tell me if you want to pick anything to avoid duplicate efforts. > > Sorry about that, great minds think alike, I guess. I was actually coming from this because I was fixing the API tests failing in QtWebKit2.3, I will now stick to those that only fail there then.
Most of them probably apply to trunk as well. If you can wait 2-3 days until you can see the rest of what I have it would be nice. Those tests have been failing for more than 1 year after all.
Allan Sandfeld Jensen
Comment 6
2012-11-08 08:33:40 PST
(In reply to
comment #5
)
> (In reply to
comment #4
) > > (In reply to
comment #3
) > > > I have most of the WebKit1 tests fixed except 1 WebGL test and 1 QWebElement test still failing. I'm in the process of uploading the work so please tell me if you want to pick anything to avoid duplicate efforts. > > > > Sorry about that, great minds think alike, I guess. I was actually coming from this because I was fixing the API tests failing in QtWebKit2.3, I will now stick to those that only fail there then. > > Most of them probably apply to trunk as well. If you can wait 2-3 days until you can see the rest of what I have it would be nice. Those tests have been failing for more than 1 year after all.
Will do.
WebKit Review Bot
Comment 7
2012-11-08 10:04:52 PST
Comment on
attachment 173026
[details]
Patch Rejecting
attachment 173026
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: re/ChangeLog CONFLICT (content): Merge conflict in Source/WebCore/ChangeLog Failed to merge in the changes. Patch failed at 0001 Unreviewed chromium mac rebaseline for
r101497
. When you have resolved this problem run "git rebase --continue". If you would prefer to skip this patch, instead run "git rebase --skip". To restore the original branch and stop rebasing run "git rebase --abort". rebase refs/remotes/origin/master: command returned error: 1 Died at Tools/Scripts/update-webkit line 154. Full output:
http://queues.webkit.org/results/14770266
Allan Sandfeld Jensen
Comment 8
2012-11-09 03:29:02 PST
Committed
r134044
: <
http://trac.webkit.org/changeset/134044
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug