Regression(r107593) Crash in ContextMenuController::addInspectElementItem() https://bugs.webkit.org/show_bug.cgi?id=101595

Reviewed by Simon Hausmann.

If the contextMenu is a null pointer treat it as empty, appendItem will later
create it if necessary.

* page/ContextMenuController.cpp:
(WebCore::ContextMenuController::addInspectElementItem):

Canonical link: https://commits.webkit.org/119830@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@134044 268f45cc-cd09-0410-ab3c-d52691b4dbfc